<resources>
    <string name="app_name">TestTask</string>
    <string name="stations">Stations</string>
    <string name="reports">Reports</string>
    <string name="enter_supplier">Enter supplier</string>
    <string name="qty">Qty</string>
    <string name="sum">Sum</string>
    <string name="submit">Submit</string>
    <string name="add_station">Add station</string>
    <string name="station">Station</string>
    <string name="edit_station">Edit station</string>
    <string name="supplier_required">Supplier is required</string>
    <string name="qty_required">Quantity is required</string>
    <string name="sum_required">Sum is required</string>
    <string name="fuel_type">Fuel type</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="delete">delete</string>
    <string name="refresh">Refresh</string>
    <string name="maps_error">Maps error</string>
    <string name="ok">OK</string>
    <string name="geo_permission_denied">Geolocation permission request was denied.</string>
    <string name="maps_read_error" type="id">Error readind maps</string>
    <string name="permissions_error">Permissions error</string>
    <string name="station_save_error">Station save error</string>
</resources>