<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/textSupplier"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/enter_supplier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineName"/>

    <TextView
        android:id="@+id/textAddress"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSupplier"
        app:layout_constraintEnd_toEndOf="parent"
/>

    <TextView
        android:id="@+id/textQty"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/qty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineName"
        app:layout_constraintEnd_toStartOf="@id/guidelineHalf"/>

    <TextView
        android:id="@+id/textSum"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/sum"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineHalf"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textSum"
        android:id="@+id/imageDelete"
        android:src="@drawable/delete"
        android:contentDescription="@string/delete"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:backgroundTint="@color/black"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>